# validate-1euro

./: 1efilter.h  Arduino.h  CMakeLists.txt  FilteredDistance.cpp  FilteredDistance.h  FilteredDistanceKalman.cpp  FilteredDistanceKalman.h  datasets.h  main.cpp
